demo-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetcoreapp
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      dotnetcoreapp: dotnetcoreapp
  template:
    metadata:
      labels:
        dotnetcoreapp: dotnetcoreapp
    spec:
      containers:
        - name: dotnetcoreapp
          image: dtr.demo.dckr.org/demo/dotnetdemo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: dotnetcoreapp
  namespace: demo
spec:
  selector:
    dotnetcoreapp: dotnetcoreapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
