demoapp-win.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-win
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-win
  namespace: demo-win
spec:
  replicas: 2
  selector:
    matchLabels:
      demoapp-win: demoapp-win
  template:
    metadata:
      labels:
        demoapp-win: demoapp-win
    spec:
      containers:
        - name: demoapp-win
          image: mbentley/dotnetdemo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp-win
  namespace: demo-win
spec:
  selector:
    demoapp-win: demoapp-win
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
