demoapp.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      demoapp: demoapp
  template:
    metadata:
      labels:
        demoapp: demoapp
    spec:
      containers:
        - name: demoapp
          image: mbentley/tomcat7:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demo
spec:
  selector:
    demoapp: demoapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
