gateway-win.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  generation: 1
  name: gw1
  namespace: demo-win
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - demoapp-win.istio.ea.demo.dckr.org
    - demoapp-win.k8s.ea.demo.dckr.org
    - demoapp-win.envoy.ea.demo.dckr.org
    port:
      name: http80
      number: 80
      protocol: HTTP
