virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  generation: 1
  name: demoapp-vs
  namespace: demo
spec:
  gateways:
  - gw1
  hosts:
  - demoapp-envoy.ea.demo.dckr.org
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demoapp
        port:
          number: 8080
