virtualservice-win.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  generation: 1
  name: demoapp-win-vs
  namespace: demo-win
spec:
  gateways:
  - gw1
  hosts:
  - demoapp-win.istio.ea.demo.dckr.org
  - demoapp-win.k8s.ea.demo.dckr.org
  - demoapp-win.envoy.ea.demo.dckr.org
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demoapp-win
        port:
          number: 80
